--- a/germax-frontend/package.json
+++ b/germax-frontend/package.json
@@ -14,6 +14,8 @@
 	},
 	"devDependencies": {
 		"@types/bootstrap": "^5.2.10",
+		"clean-webpack-plugin": "^4.0.0",
+		"copy-webpack-plugin": "^12.0.2",
 		"css-loader": "^6.10.0",
 		"html-webpack-plugin": "^5.6.0",
 		"html-webpack-tags-plugin": "^3.0.2",
