--- a/germax-frontend/package.json
+++ b/germax-frontend/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"scripts": {
 		"build": "webpack",
-		"start": "webpack serve --open"
+		"start": "webpack --watch"
 	},
 	"dependencies": {
 		"@fullcalendar/core": "^6.1.11",
@@ -13,15 +13,11 @@
 		"fullcalendar": "^6.1.11"
 	},
 	"devDependencies": {
-		"@types/bootstrap": "^5.2.10",
 		"clean-webpack-plugin": "^4.0.0",
 		"copy-webpack-plugin": "^12.0.2",
 		"css-loader": "^6.10.0",
 		"html-webpack-plugin": "^5.6.0",
-		"html-webpack-tags-plugin": "^3.0.2",
 		"mini-css-extract-plugin": "^2.8.1",
-		"sass": "^1.72.0",
-		"sass-loader": "^14.1.1",
 		"style-loader": "^3.3.4",
 		"webpack": "^5.90.3",
 		"webpack-cli": "^5.1.4",
