removed from git

--- a/.gitignore
+++ b/.gitignore
@@ -30,4 +30,6 @@ dist-ssr
 /germax-api/src/utils
 /germax-api/src/controllers
 /germax-api/src/services
-
+/germax-api/src/equipment
+/germax-api/src/models
+/germax-api/src/files
