index deleted for equipment's file

--- a/.gitignore
+++ b/.gitignore
@@ -27,9 +27,11 @@ dist-ssr
 *.sw?
 
 # germax-api
-/germax-api/src/utils
-/germax-api/src/controllers
-/germax-api/src/services
-/germax-api/src/equipment
-/germax-api/src/models
-/germax-api/src/files
+/germax-api/src/utils/*
+/germax-api/src/controllers/*
+/germax-api/src/services/*
+/germax-api/src/equipment/*
+/germax-api/src/models/*
+/germax-api/src/files/*
+
+
