--- a/germaloc-api/.htaccess
+++ b/germaloc-api/.htaccess
@@ -1,8 +1,8 @@
 RewriteEngine On
 RewriteBase /
 
-# Перенаправление запросов для /{route}/
+# Redirection des requêtes pour /{route}/
 RewriteRule ^([^/]+)/?$ src/endpoints/$1/index.php [L]
 
-# Перенаправление запросов для /{route}/{route-child}/
+# Redirection des requêtes pour /{route}/{route-child}/
 RewriteRule ^([^/]+)/([^/]+)/?$ src/endpoints/$1/$2.php [L]
